Adding shortcut icon

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/995e334b50.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">    <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="shortcut icon" href="../img/instagram-logo-icon.png" >
 </head>
 <body>
     <header class="header">
